5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1789_1618.log
== TEST (2019-05-29 18:22:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
v1 = array()
b = size(v)
i = 0
k = arrange(b)

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:22:40) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
v1 = array('a')
b = size(v)
i = 0
k = arrange(b)

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:23:41) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
v1 = array(s('a'))
b = size(v)
i = 0
k = arrange(b)

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:24:28) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
array(s('a'))
b = size(v)
i = 0
k = arrange(b)

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:26:31) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
v = array('igor')
b = size(v)
i = 0
k = arrange(b)
print(V[0:2])

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:27:34) 
-- CODE:
from numpy import*

v = array(eval(input("digite os coeficiesntes: ")))
array(V['IGOR'])
b = size(v)
i = 0
k = arrange(b)
print(V[0:2])

while	(i != b):
	    i = i + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:32:00) 
-- CODE:
v = array('igor')
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array('igor')
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:03) 
-- CODE:
v = array('igor')
print(eval(v))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array('igor')
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:19) 
-- CODE:
v = array(eval('igor')
print(v)
-- ERROR:
File "XXXX", line 2
    print(v)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:33:56) 
-- CODE:
array(v['igor'])
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    array(v['igor'])
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:36:04) 
-- CODE:
v = array['igor']
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array['igor']
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:26) 
-- CODE:
v = array('igor')
print(v[0])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array('igor')
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:39:46) 
-- CODE:
v = 'igor'
print(v[0])
-- OUTPUT:
i
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:44:26) 
-- CODE:
from numpy import*
v = array(eval(input("digite os coeficientes: ")))
v1 = 'x^'
i = 0
a = v[0]
a = 'x^' + str(a)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:18) 
-- CODE:
from numpy import*
v = array(eval(input("digite os coeficientes: ")))
v1 = 'x^'
i = 0
a = v[0]
a = str(a) + v1*i
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:45:47) 
-- CODE:
from numpy import*
v = array(eval(input("digite os coeficientes: ")))
v1 = 'x^'
i = 0
a = v[0]
a = str(a) + 'x^'*i
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:49:36) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0

while	(i != a):
		saida = str(i) +'x^' + str(i)
	
	
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:50:03) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0

while	(i != a):
		saida = str(i) +'x^' + str(i)
		i = i + 1
	
	
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:05) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
	
	
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 18:51:36) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		b = b + saida
	
	
print(saida)
-- EXECUTION TIME:
0.431644
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1618/main.py", line 11, in <module>
    b = b + saida
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:51:37) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		b = b + saida
	
	
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:07) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		b = b + saida
	
	
print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:52:37) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

	
	
		print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:54:08) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i - 1 != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

	
	
		print(saida + str(v[-1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:15) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

	
	
		print(saida )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:55:41) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i != a):
		str(saida) = str(v[i]) +'x^' + str(i)
		i = i + 1

	
	
print(saida )
-- ERROR:
File "XXXX", line 10
    str(saida) = str(v[i]) +'x^' + str(i)
    ^
SyntaxError: can't assign to function call
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:57:07) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i != a):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		v = v + saida
print(v )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i - 1 != a - 1):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		print(saida, str(v[-1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:16) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i - 1 != a - 1):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 18:59:37) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		print(saida, str(v[-1]))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:00) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1
		print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:23) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:00:51) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:16:57) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

      print(saida)
-- ERROR:
File "XXXX", line 13
    print(saida)
               ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:17:08) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

		print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:18:16) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))

a = size(v)
i = 0
b = 0

while	(i  != a ):
		saida = str(v[i]) +'x^' + str(i)
		i = i + 1

		print(saida)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 str(v[i]) +'x^' + str(i)
		i = i + 1

print(v1)
-- ERROR:
File "XXXX", line 10
    v1= v1 str(v[i]) +'x^' + str(i)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:20:13) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(i)
		i = i + 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:21:34) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[1]) +'x^ +' + str(i)
		i = i + 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:22:06) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[1]) +'x^' + str(i) + " + "
		i = i + 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:24:18) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[1]) +'x^' + str() + "+"
		i = i + 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:17) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[1]) +'x^' + str(a - 1) + "+"
		i = i + 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:25:54) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[1]) +'x^' + str(a ) + "+"
		i = i + 1
		a = a - 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:26:30) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a ) + "+"
		i = i + 1
		a = a - 1

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:27:55) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0
g = a

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(g) + "+"
		i = i + 1
	   g = g - 1

print(v1)
-- ERROR:
File "XXXX", line 13
    g = g - 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:28:27) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0
g = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(g) + "+"
		i = i + 1
	   g =  g + a - 1

print(v1)
-- ERROR:
File "XXXX", line 13
    g =  g + a - 1
                 ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:29:09) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0
h = size(v)

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(h) + "+"
		i = i + 1
	   h = h -1

print(v1)
-- ERROR:
File "XXXX", line 13
    h = h -1
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:29:20) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0
h = size(v)

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(h) + "+"
		i = i + 1
	   h = h - 1
print(v1)
-- ERROR:
File "XXXX", line 13
    h = h - 1
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:30:03) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a - 1) + "+"
		i = i + 1
	   
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:32:23) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str() + " + "
		i = i + 1
		
	   
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:01) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str() + " + "
		i = i + 1
		
	   
print(v1 - "+")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:33:56) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str() + " + "
		i = i + 1
		

v1 = v1 - "+"
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:34:37) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:37:18) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = v[-1]
j = v[-2]
v1 = v1 + str(f) + 'x + ' str(j)
print(v1)
-- EXECUTION TIME:
0.147315
-- ERROR:
  File "/home/codebench/codes/1789/1618/main.py", line 16
    v1 = v1 + str(f) + 'x + ' str(j)
                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:20) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = v[-1]
j = v[-2]
v1 = v1 + str(f) + 'x + ' str(j)
print(v1)
-- ERROR:
File "XXXX", line 16
    v1 = v1 + str(f) + 'x + ' str(j)
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:37:54) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = v[-1]
j = v[-2]
print(f)
print(j)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:38:46) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])
print(f)

print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:39:49) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1, f + 'x +', j )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 19:40:05) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1, f + 'x +', j )
-- EXECUTION TIME:
0.469996
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1789/1618/main.py", line 10, in <module>
    v1= v1 + str(v[i]) +'x^' + str(a) + " + "
IndexError: index 3 is out of bounds for axis 0 with size 3

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:09) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1, f + 'x +', j )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:40:45) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1, f + 'x +', j )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:41:07) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(a) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1 )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 19:41:49) 
-- CODE:
from numpy import*

v = array(eval(input("digite o coeficientes: ")))
v1 = ''
a = size(v)
i = 0
b = 0

while	(i  != a ):
		v1= v1 + str(v[i]) +'x^' + str(i) + " + "
		i = i + 1
		a = a - 1
		
f = str(v[-1])
j = str(v[-2])


print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
